{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 308,
  "lineage": "d89a3711-6598-2f55-7b48-5e7c0ce40913",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:loadbalancer/app/gameland-alb/9bd498c90c1753c7",
            "arn_suffix": "app/gameland-alb/9bd498c90c1753c7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "gameland-alb-1112619694.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:loadbalancer/app/gameland-alb/9bd498c90c1753c7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gameland-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0f518c6caa57c6f3a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0334bdc53d1cd0ba5"
              },
              {
                "subnet_id": "subnet-04ec4a63dc398af6c"
              }
            ],
            "subnets": [
              "subnet-0334bdc53d1cd0ba5",
              "subnet-04ec4a63dc398af6c"
            ],
            "tags": {
              "Name": "gameland-alb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-alb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:loadbalancer/app/gameland-alb/9bd498c90c1753c7"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:listener/app/gameland-alb/9bd498c90c1753c7/bb2e7b78e329e142",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:targetgroup/gameland-tg/c90bcc0433a3f19e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:listener/app/gameland-alb/9bd498c90c1753c7/bb2e7b78e329e142",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:loadbalancer/app/gameland-alb/9bd498c90c1753c7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gameland-alb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-alb",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:listener/app/gameland-alb/9bd498c90c1753c7/bb2e7b78e329e142"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.lb_sg.aws_security_group.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:targetgroup/gameland-tg/c90bcc0433a3f19e",
            "arn_suffix": "targetgroup/gameland-tg/c90bcc0433a3f19e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:targetgroup/gameland-tg/c90bcc0433a3f19e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gameland-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:110068290821:targetgroup/gameland-tg/c90bcc0433a3f19e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cp_ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f439e819ba112bd7",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:instance/i-0e19d12e79d73eac6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e19d12e79d73eac6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gameland-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0278bac93da1b94a9"
              }
            ],
            "primary_network_interface_id": "eni-0278bac93da1b94a9",
            "private_dns": "ip-10-0-3-64.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.64",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013f5e501dbdbbdfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085915e58e13afdbd",
            "tags": {
              "Name": "gameland-k3s-control-plane-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-k3s-control-plane-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0398c4f49d6aa0043"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.lb_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this",
            "module.private_subnet_cp_a.aws_subnet.this",
            "module.private_subnet_cp_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f439e819ba112bd7",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:instance/i-0a5269eb093566312",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5269eb093566312",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gameland-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0286279e20e12f905"
              }
            ],
            "primary_network_interface_id": "eni-0286279e20e12f905",
            "private_dns": "ip-10-0-4-216.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.216",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025e11140c89934b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c05d7dd6d45b924f",
            "tags": {
              "Name": "gameland-k3s-control-plane-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-k3s-control-plane-2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0398c4f49d6aa0043"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.lb_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this",
            "module.private_subnet_cp_a.aws_subnet.this",
            "module.private_subnet_cp_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f439e819ba112bd7",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:instance/i-0b54dc25959cb47bf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b54dc25959cb47bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gameland-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06ff86987d82616b6"
              }
            ],
            "primary_network_interface_id": "eni-06ff86987d82616b6",
            "private_dns": "ip-10-0-7-168.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.168",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b392ae301b5f0d2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aac1158f43bef126",
            "tags": {
              "Name": "gameland-postgres-db-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-postgres-db-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0398c4f49d6aa0043"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.lb_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this",
            "module.private_subnet_db_a.aws_subnet.this",
            "module.private_subnet_db_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f439e819ba112bd7",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:instance/i-02fd730d8b1845473",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fd730d8b1845473",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gameland-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a374d08b86f4f437"
              }
            ],
            "primary_network_interface_id": "eni-0a374d08b86f4f437",
            "private_dns": "ip-10-0-8-87.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.87",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06050aa2c89d2a974",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056359d4a4bba3729",
            "tags": {
              "Name": "gameland-postgres-db-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-postgres-db-2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0398c4f49d6aa0043"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.lb_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this",
            "module.private_subnet_db_a.aws_subnet.this",
            "module.private_subnet_db_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff7d620fa558d66f",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:elastic-ip/eipalloc-0ff7d620fa558d66f",
            "domain": "vpc",
            "id": "eipalloc-0ff7d620fa558d66f",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-74-221-120.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.221.120",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-nat-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-nat-1",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07503319272df08fc",
            "arn": "arn:aws:ec2:eu-central-1:110068290821:elastic-ip/eipalloc-07503319272df08fc",
            "domain": "vpc",
            "id": "eipalloc-07503319272df08fc",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-59-141-6.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.141.6",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-nat-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-nat-2",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:internet-gateway/igw-0689369740814e0bb",
            "id": "igw-0689369740814e0bb",
            "owner_id": "110068290821",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:security-group/sg-0f518c6caa57c6f3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f518c6caa57c6f3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "110068290821",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "lb-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f334e236d212818"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "sg-0f518c6caa57c6f3a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff7d620fa558d66f",
            "association_id": "eipassoc-0121821ecdbe3495e",
            "connectivity_type": "public",
            "id": "nat-00117627e62432b84",
            "network_interface_id": "eni-0b5027df6f32f510f",
            "private_ip": "10.0.1.169",
            "public_ip": "3.74.221.120",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ec4a63dc398af6c",
            "tags": {
              "Name": "gameland-nat-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-nat-1",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07503319272df08fc",
            "association_id": "eipassoc-07f45d0e9c897dd28",
            "connectivity_type": "public",
            "id": "nat-0fe440f2442c5fe0f",
            "network_interface_id": "eni-0cbf0bd56a544af57",
            "private_ip": "10.0.2.89",
            "public_ip": "52.59.141.6",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0334bdc53d1cd0ba5",
            "tags": {
              "Name": "gameland-nat-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-nat-2",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_a",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0deab1d9a9f36f67e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00117627e62432b84",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0deab1d9a9f36f67e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0deab1d9a9f36f67e"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.private_route_table_a.aws_route_table.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_b",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029bbc6d7397f19d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe440f2442c5fe0f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-029bbc6d7397f19d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-029bbc6d7397f19d6"
          },
          "dependencies": [
            "module.elastic_ip.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.private_route_table_b.aws_route_table.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:route-table/rtb-0deab1d9a9f36f67e",
            "id": "rtb-0deab1d9a9f36f67e",
            "owner_id": "110068290821",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "gameland-private-route-table-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-route-table-a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f334e236d212818"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "rtb-0deab1d9a9f36f67e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_cp_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9b699892ba6bdba",
            "region": "eu-central-1",
            "route_table_id": "rtb-0deab1d9a9f36f67e",
            "subnet_id": "subnet-085915e58e13afdbd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_a.aws_route_table.this",
            "module.private_subnet_cp_a.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_cp_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07436e7a2bb00b5a9",
            "region": "eu-central-1",
            "route_table_id": "rtb-029bbc6d7397f19d6",
            "subnet_id": "subnet-0c05d7dd6d45b924f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_b.aws_route_table.this",
            "module.private_subnet_cp_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_db_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006947d5045bdc251",
            "region": "eu-central-1",
            "route_table_id": "rtb-0deab1d9a9f36f67e",
            "subnet_id": "subnet-0aac1158f43bef126"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_a.aws_route_table.this",
            "module.private_subnet_db_a.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_db_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00593075fdae27f03",
            "region": "eu-central-1",
            "route_table_id": "rtb-029bbc6d7397f19d6",
            "subnet_id": "subnet-056359d4a4bba3729"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_b.aws_route_table.this",
            "module.private_subnet_db_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_worker_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e956b2d8c418d0",
            "region": "eu-central-1",
            "route_table_id": "rtb-0deab1d9a9f36f67e",
            "subnet_id": "subnet-0786553e3ee43cca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_a.aws_route_table.this",
            "module.private_subnet_worker_a.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_assoc_worker_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c070c4e6838faa72",
            "region": "eu-central-1",
            "route_table_id": "rtb-029bbc6d7397f19d6",
            "subnet_id": "subnet-0e3e19371e39eff8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_route_table_b.aws_route_table.this",
            "module.private_subnet_worker_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:route-table/rtb-029bbc6d7397f19d6",
            "id": "rtb-029bbc6d7397f19d6",
            "owner_id": "110068290821",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "gameland-private-route-table-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-route-table-b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f334e236d212818"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "rtb-029bbc6d7397f19d6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:security-group/sg-0398c4f49d6aa0043",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0398c4f49d6aa0043",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "110068290821",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f334e236d212818"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "sg-0398c4f49d6aa0043",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_cp_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-085915e58e13afdbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085915e58e13afdbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-control-plane-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-control-plane-a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-085915e58e13afdbd",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_cp_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-0c05d7dd6d45b924f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c05d7dd6d45b924f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-control-plane-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-control-plane-b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-0c05d7dd6d45b924f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_db_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-0aac1158f43bef126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac1158f43bef126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-db-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-db-a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-0aac1158f43bef126",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_db_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-056359d4a4bba3729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056359d4a4bba3729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-db-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-db-b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-056359d4a4bba3729",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_worker_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-0786553e3ee43cca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0786553e3ee43cca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-worker-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-worker-a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-0786553e3ee43cca6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_worker_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-0e3e19371e39eff8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e19371e39eff8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-private-worker-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-private-worker-b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-0e3e19371e39eff8e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0689369740814e0bb",
            "id": "r-rtb-036d7beaff31ad8801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-036d7beaff31ad880",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-036d7beaff31ad880"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.public_route_table.aws_route_table.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:route-table/rtb-036d7beaff31ad880",
            "id": "rtb-036d7beaff31ad880",
            "owner_id": "110068290821",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "gameland-public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f334e236d212818"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "rtb-036d7beaff31ad880",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table_assoc_a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c21cd04a33d77c",
            "region": "eu-central-1",
            "route_table_id": "rtb-036d7beaff31ad880",
            "subnet_id": "subnet-04ec4a63dc398af6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_route_table.aws_route_table.this",
            "module.public_subnet_a.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table_assoc_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9ce66174b364e28",
            "region": "eu-central-1",
            "route_table_id": "rtb-036d7beaff31ad880",
            "subnet_id": "subnet-0334bdc53d1cd0ba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_route_table.aws_route_table.this",
            "module.public_subnet_b.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-04ec4a63dc398af6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec4a63dc398af6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-public-subnet-a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-public-subnet-a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-04ec4a63dc398af6c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:subnet/subnet-0334bdc53d1cd0ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0334bdc53d1cd0ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110068290821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-public-subnet-b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-public-subnet-b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06f334e236d212818"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "110068290821",
            "id": "subnet-0334bdc53d1cd0ba5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:110068290821:vpc/vpc-06f334e236d212818",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b33899555abb0349",
            "default_route_table_id": "rtb-0b406035d6fb5a654",
            "default_security_group_id": "sg-03743bdd342b72ea9",
            "dhcp_options_id": "dopt-0838c66cd50a7f74b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f334e236d212818",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b406035d6fb5a654",
            "owner_id": "110068290821",
            "region": "eu-central-1",
            "tags": {
              "Name": "gameland-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gameland-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}